--- a/02-Nesting-in-Sass/css/main.css
+++ b/02-Nesting-in-Sass/css/main.css
@@ -1,12 +1,20 @@
 .nav {
-  background-color: #222; }
+  background-color: blue; }
+  .nav ul li {
+    list-style: none; }
+  .nav a {
+    text-decoration: none;
+    font-size: 20px;
+    color: beige; }
+    .nav a:hover {
+      color: orangered; }
 
 .banner h1 {
   font-size: 40px;
-  color: red;
+  color: #222;
   text-align: center; }
 
 .footer h3 {
   font-size: 30px;
-  color: red;
+  color: #222;
   text-align: center; }
