Reorganised Sass files by separating variables, base styles, components and layouts into their own files.

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
+* {
+  margin: 0;
+  padding: 0; }
+
 body {
   font-family: "Merriweather", serif;
   color: #333333;
-  background: #fff8dc;
-  margin: 0;
-  padding: 0; }
+  background: #fff8dc; }
 
 .logo {
   color: #8b0000;
