--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,20 +1,9 @@
-$primary: #8b0000;
-$secondary: #ffd700;
-$forest: #228822;
-$light: #fff8dc;
-$dark: #333333;
-$logo: 'UnifrakturMaguntia', cursive;
-$main-font: 'Merriweather', serif;
+@import 'variables';
+@import 'base';
+@import 'components';
+@import 'layout'
 
-body {
-  font-family: $main-font;
-  color: $dark;
-  background: $light;
-  margin: 0;
-  padding: 0;
-}
 
-.logo {
-  color: $primary;
-  font-family: $logo;
-}
+
+
+
