Working on the header. Reprofiled the main background image

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,5 +3,6 @@ $secondary: #ffd700;
 $forest: #228822;
 $light: #fff8dc;
 $dark: #333333;
+$black: #000000;
 $logo: 'UnifrakturMaguntia', cursive;
 $main-font: 'Merriweather', serif;
