--- a/css/main.css
+++ b/css/main.css
@@ -10,3 +10,9 @@ body {
 .logo {
   color: #8b0000;
   font-family: "UnifrakturMaguntia", cursive; }
+
+.header {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url("../images/bg-2.jpg") center no-repeat;
+  background-size: cover; }
