Styled logo symbol

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,4 +1,8 @@
 .logo {
-  color: $primary;
-  font-family: $logo;
+  font-size: 70px; 
+  color: $forest;
+}
+
+.logo-font {
+  font-family: $logo-font;
 }
