--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,5 +4,5 @@ $forest: #228822;
 $light: #fff8dc;
 $dark: #333333;
 $black: #000000;
-$logo: 'UnifrakturMaguntia', cursive;
+$logo-font: 'UnifrakturMaguntia', cursive;
 $main-font: 'Merriweather', serif;
