--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,21 @@ body {
   background: #fff8dc; }
 
 .logo {
-  color: #8b0000;
+  font-size: 70px;
+  color: #228822; }
+
+.logo-font {
   font-family: "UnifrakturMaguntia", cursive; }
 
 .header {
+  position: relative;
   width: 100%;
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url("../images/bg-2.jpg") center no-repeat;
   background-size: cover; }
+  .header .brand {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff8dc; }
