--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   width: 100%;
   height: 100vh;
   background: linear-gradient(
@@ -6,4 +7,12 @@
     rgba($black, 0.6)),
     url('../images/bg-2.jpg') center no-repeat;
   background-size: cover;
+  
+  .brand {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: $light;
+  }
 }
