--- a/css/main.css
+++ b/css/main.css
@@ -10,14 +10,14 @@ body {
 .logo {
   font-size: 70px;
   color: #228822;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 110px;
   height: 110px;
   border: 3px solid #ffd700;
   border-radius: 50%;
-  padding: 10px; }
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .logo-font {
   font-family: "UnifrakturMaguntia", cursive; }
