--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,14 +1,12 @@
 .logo {
   font-size: 70px; 
   color: $forest;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 110px;
   height: 110px;
   border: 3px solid $secondary;
   border-radius: 50%;
   padding: 10px;
+  @include flexLayout;
 }
 
 .logo-font {
