--- a/css/main.css
+++ b/css/main.css
@@ -12,15 +12,23 @@ body {
   color: #228822;
   width: 110px;
   height: 110px;
-  border: 3px solid #ffd700;
-  border-radius: 50%;
-  padding: 10px;
+  text-shadow: 1px 1px 1px #ffd700;
   display: flex;
   justify-content: center;
   align-items: center; }
 
-.logo-font {
-  font-family: "UnifrakturMaguntia", cursive; }
+.main-name {
+  font-family: "UnifrakturMaguntia", cursive;
+  font-size: 50px;
+  color: #ffd700; }
+
+.sub-name {
+  font-size: 18px;
+  color: #ffd700;
+  text-align: center;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase; }
 
 .header {
   position: relative;
@@ -33,4 +41,6 @@ body {
     top: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #fff8dc; }
+    color: #fff8dc;
+    display: flex;
+    align-items: center; }
