--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,6 +4,12 @@
   align-items: center;
 }
 
+@mixin textStyles {
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
 * {
   margin: 0;
   padding: 0;
