--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -3,12 +3,22 @@
   color: $forest;
   width: 110px;
   height: 110px;
-  border: 3px solid $secondary;
-  border-radius: 50%;
-  padding: 10px;
+  text-shadow: 1px 1px 1px $secondary;
   @include flexLayout;
 }
 
-.logo-font {
+.main-name {
   font-family: $logo-font;
+  font-size: 50px;
+  color: $secondary
 }
+
+.sub-name {
+  font-size: 18px;
+  color: $secondary;
+  text-align: center;
+  @include textStyles;
+}
+
+
+
