--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body {
   width: 110px;
   height: 110px;
   text-shadow: 1px 1px 1px #ffd700;
+  margin-right: 10px;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -41,6 +42,5 @@ body {
     top: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #fff8dc;
     display: flex;
     align-items: center; }
