Using mixin centering for banner

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -10,6 +10,13 @@
   text-transform: uppercase;
 }
 
+@mixin centering($topvalue) {
+  position: absolute;
+  top: $topvalue;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 * {
   margin: 0;
   padding: 0;
