--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -8,12 +8,13 @@
     url('../images/bg-2.jpg') center no-repeat;
   background-size: cover;
   
-  .brand {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .brand {  
     display: flex;
     align-items: center;
+    @include centering(15%);
+  }
+
+  &-banner {
+    @include centering(50%);
   }
 }
