--- a/css/main.css
+++ b/css/main.css
@@ -25,11 +25,25 @@ body {
 
 .sub-name {
   font-size: 18px;
-  color: #ffd700;
+  color: #fff8dc;
   text-align: center;
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase; }
+
+.main-heading {
+  font-family: "UnifrakturMaguntia", cursive;
+  font-size: 100px;
+  font-weight: lighter;
+  color: #ffd700;
+  margin: 40px 0; }
+
+.sub-heading {
+  font-family: inherit;
+  font-size: 40px;
+  font-weight: 200;
+  color: #fff8dc;
+  margin-bottom: 80px; }
 
 .header {
   position: relative;
@@ -45,6 +59,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%); }
   .header-banner {
+    text-align: center;
+    color: white;
     position: absolute;
     top: 50%;
     left: 50%;
