--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -49,13 +49,12 @@
   border: 1px solid $forest;
   border-radius: 5px;
   outline: none;
+  cursor: pointer;
   transition: all 0.3s ease-in;
+  
+  &:hover {
+    color: $forest;
+    background-color: $secondary;
+  }
 }
-
-.main-btn:hover {
-  color: $forest;
-  background-color: $secondary;
-}
-
-
 
