Changed the main-heading font to $main-font.

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body {
   text-transform: uppercase; }
 
 .main-heading {
-  font-family: "UnifrakturMaguntia", cursive;
+  font-family: "Merriweather", serif;
   font-size: 100px;
   font-weight: lighter;
   color: #ffd700;
