--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -22,7 +22,7 @@
 }
 
 .main-heading {
-  font-family: $logo-font;
+  font-family: $main-font;
   font-size: 100px;
   font-weight: lighter;
   color: $secondary; 
