--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,28 @@ body {
   display: flex;
   justify-content: center;
   align-items: center; }
+  @media (max-width: 1000px) {
+    .logo {
+      font-size: 50px;
+      width: 90px;
+      height: 90px; } }
+  @media (max-width: 500px) {
+    .logo {
+      font-size: 30px;
+      width: 50px;
+      height: 50px; } }
 
 .main-name {
   font-family: "UnifrakturMaguntia", cursive;
   font-size: 50px;
   color: #ffd700; }
+  @media (max-width: 1000px) {
+    .main-name {
+      font-size: 40px; } }
+  @media (max-width: 500px) {
+    .main-name {
+      font-size: 20px;
+      text-align: center; } }
 
 .sub-name {
   font-size: 18px;
@@ -30,6 +47,10 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase; }
+  @media (max-width: 500px) {
+    .sub-name {
+      font-size: 12px;
+      text-align: center; } }
 
 .main-heading {
   font-family: "Merriweather", serif;
@@ -37,12 +58,37 @@ body {
   font-weight: lighter;
   color: #ffd700;
   margin: 40px 0; }
+  @media (max-width: 1600px) {
+    .main-heading {
+      font-size: 80px; } }
+  @media (max-width: 1000px) {
+    .main-heading {
+      font-size: 60px; } }
+  @media (max-width: 500px) {
+    .main-heading {
+      font-size: 40px;
+      margin-bottom: 20px; } }
 
 .sub-heading {
   font-size: 40px;
   font-weight: 200;
   color: #fff8dc;
   margin-bottom: 80px; }
+  @media (max-width: 1600px) {
+    .sub-heading {
+      font-size: 50px;
+      margin-bottom: 50px; } }
+  @media (max-width: 1300px) {
+    .sub-heading {
+      font-size: 40px;
+      margin-bottom: 30px; } }
+  @media (max-width: 1000px) {
+    .sub-heading {
+      font-size: 30px; } }
+  @media (max-width: 500px) {
+    .sub-heading {
+      font-size: 20px;
+      margin-bottom: 10px; } }
 
 .main-btn {
   width: 170px;
@@ -62,6 +108,16 @@ body {
   .main-btn:hover {
     color: #228822;
     background-color: #ffd700; }
+  @media (max-width: 800px) {
+    .main-btn {
+      width: 150px;
+      height: 35px;
+      font-size: 12px; } }
+  @media (max-width: 500px) {
+    .main-btn {
+      width: 130px;
+      height: 30px;
+      font-size: 10px; } }
 
 .header {
   position: relative;
@@ -76,6 +132,12 @@ body {
     top: 15%;
     left: 50%;
     transform: translate(-50%, -50%); }
+    @media (max-width: 500px) {
+      .header .brand {
+        position: absolute;
+        top: 15%;
+        left: 50%;
+        transform: translate(-50%, -50%); } }
   .header-banner {
     text-align: center;
     position: absolute;
