--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -6,12 +6,33 @@
   text-shadow: 1px 1px 1px $secondary;
   margin-right: 10px;
   @include flexLayout;
+
+  @media(max-width: 1000px) {
+    font-size: 50px;
+    width: 90px;
+    height: 90px;
+  }
+  
+  @media(max-width: 500px) {
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
+  }
 }
 
 .main-name {
   font-family: $logo-font;
   font-size: 50px;
-  color: $secondary
+  color: $secondary;
+
+  @media(max-width: 1000px) {
+    font-size: 40px;
+  }
+  
+  @media(max-width: 500px) {
+    font-size: 20px;
+    text-align: center;
+  }
 }
 
 .sub-name {
@@ -19,6 +40,11 @@
   color: $light;
   text-align: center;
   @include textStyles;
+
+  @media(max-width: 500px) {
+    font-size: 12px;
+    text-align: center;
+  }
 }
 
 .main-heading {
@@ -27,6 +53,19 @@
   font-weight: lighter;
   color: $secondary; 
   margin: 40px 0;
+
+  @media(max-width: 1600px) {
+    font-size: 80px;
+  }
+  
+  @media(max-width: 1000px) {
+    font-size: 60px;
+  }
+  
+  @media(max-width: 500px) {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
 }
 
 .sub-heading {
@@ -34,6 +73,25 @@
   font-weight: 200;
   color: $light; 
   margin-bottom: 80px;
+
+  @media(max-width: 1600px) {
+    font-size: 50px; 
+    margin-bottom: 50px;
+  }
+  
+  @media(max-width: 1300px) {
+    font-size: 40px; 
+    margin-bottom: 30px;
+  }
+  
+  @media(max-width: 1000px) {
+    font-size: 30px;
+  }
+  
+  @media(max-width: 500px) {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
 }
 
 .main-btn {
@@ -56,5 +114,17 @@
     color: $forest;
     background-color: $secondary;
   }
+
+  @media(max-width: 800px) {
+    width: 150px;
+    height: 35px;
+    font-size: 12px;
+  }
+  
+  @media(max-width: 500px) {
+    width: 130px;
+    height: 30px;
+    font-size: 10px;
+  }  
 }
 
