--- a/css/main.css
+++ b/css/main.css
@@ -144,3 +144,11 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
+
+.about-us {
+  height: 90vh;
+  display: flex;
+  align-items: center; }
+  @media (max-width: 900px) {
+    .about-us {
+      height: 70vh; } }
