--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -22,3 +22,13 @@
     @include centering(50%);
   }
 }
+
+.about-us {
+  height: 90vh;
+  display: flex;
+  align-items: center;
+
+  @media(max-width: 900px) {
+    height: 70vh;
+  }
+}
