--- a/css/main.css
+++ b/css/main.css
@@ -152,3 +152,16 @@ body {
   @media (max-width: 900px) {
     .about-us {
       height: 70vh; } }
+  .about-us-left {
+    width: 40%;
+    position: relative;
+    left: -200px; }
+    @media (max-width: 1300px) {
+      .about-us-left {
+        left: -150px; } }
+    @media (max-width: 800px) {
+      .about-us-left {
+        display: none; } }
+    .about-us-left img {
+      width: 100%;
+      opacity: 0.7; }
