--- a/css/main.css
+++ b/css/main.css
@@ -165,3 +165,16 @@ body {
     .about-us-left img {
       width: 100%;
       opacity: 0.7; }
+  .about-us-right {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 100%;
+    box-sizing: border-box; }
+    @media (max-width: 1300px) {
+      .about-us-right {
+        padding: 0 50px; } }
+    @media (max-width: 800px) {
+      .about-us-right {
+        width: 100%; } }
