--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -49,4 +49,23 @@
       opacity: 0.7;
     }
   }
+
+  &-right {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 100%;
+    box-sizing: border-box;
+
+    @media(max-width: 1300px) {
+      padding: 0 50px;
+    }
+    
+    @media(max-width: 800px) {
+      width: 100%;
+    }
+
+    
+  }
 }
