--- a/css/main.css
+++ b/css/main.css
@@ -178,3 +178,8 @@ body {
     @media (max-width: 800px) {
       .about-us-right {
         width: 100%; } }
+    .about-us-right .stars {
+      margin: 30px 0; }
+      @media (max-width: 1000px) {
+        .about-us-right .stars {
+          margin-right: 15px 0; } }
