--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -66,6 +66,12 @@
       width: 100%;
     }
 
-    
+    .stars {
+      margin: 30px 0;
+
+      @media(max-width: 1000px) {
+        margin-right: 15px 0;
+      }
+    }
   }
 }
