--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -24,6 +24,7 @@
 }
 
 .about-us {
+  background-color: $black;
   height: 90vh;
   display: flex;
   align-items: center;
@@ -71,6 +72,16 @@
 
       @media(max-width: 1000px) {
         margin-right: 15px 0;
+      }
+    }
+
+    .fa-star {
+      font-size: 15px;
+      color: $light;
+      margin-left: 10px;
+
+      @media(max-width: 1000px) {
+        font-size: 12px;
       }
     }
   }
