--- a/css/main.css
+++ b/css/main.css
@@ -191,3 +191,18 @@ body {
       @media (max-width: 1000px) {
         .about-us-right .fa-star {
           font-size: 12px; } }
+    .about-us-right .description {
+      font-size: 25px;
+      color: #ffd700;
+      text-align: justify; }
+      .about-us-right .description::first-letter {
+        padding-left: 50px; }
+      @media (max-width: 1600px) {
+        .about-us-right .description {
+          font-size: 18px; } }
+      @media (max-width: 1000px) {
+        .about-us-right .description {
+          font-size: 14px; } }
+      @media (max-width: 1500px) {
+        .about-us-right .description {
+          font-size: 12px; } }
