More updates to _base.scss.

--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,7 @@
 
 body {
   font-family: "Merriweather", serif;
-  color: #333333;
-  background: #fff8dc; }
+  background-color: #333333; }
 
 .logo {
   font-size: 70px;
