Making minor changes to the button colours.

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -102,7 +102,7 @@
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 1px;
-  color: $secondary;
+  color: $light;
   background-color: $forest;
   border: 1px solid $forest;
   border-radius: 5px;
