--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,11 @@ body {
   background-color: #111;
 }
 
+.header {
+  width: 100%;
+  height: 100vh;
+  background: url("../images/bg.jpg") center no-repeat;
+  background-size: cover;
+}
+
 /*# sourceMappingURL=main.css.map */
