--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,17 @@ body {
 }
 
 .header {
+  position: relative;
   width: 100%;
   height: 100vh;
-  background: url("../images/bg.jpg") center no-repeat;
+  background: linear-gradient rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), url("../images/bg.jpg") center no-repeat;
   background-size: cover;
+}
+.header .brand {
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /*# sourceMappingURL=main.css.map */
