--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,6 +1,17 @@
 .header {
+  position: relative;
   width: 100%;
   height: 100vh;
-  background: url('../images/bg.jpg') center no-repeat;
+  background: linear-gradient (
+    rgba($black, 0.8),
+    rgba($black, 0.7)),
+    url('../images/bg.jpg') center no-repeat;
   background-size: cover;
+
+  .brand {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
