--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: linear-gradient rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), url("../images/bg.jpg") center no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url("../images/bg.jpg") center no-repeat;
   background-size: cover;
 }
 .header .brand {
@@ -19,6 +19,12 @@ body {
   top: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: #fffcfa;
+}
+
+.logo {
+  font-size: 70px;
+  color: #ffd700;
 }
 
 /*# sourceMappingURL=main.css.map */
