--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -2,9 +2,9 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: linear-gradient (
-    rgba($black, 0.8),
-    rgba($black, 0.7)),
+  background: linear-gradient(
+    rgba($black, 0.7),
+    rgba($black, 0.6)),
     url('../images/bg.jpg') center no-repeat;
   background-size: cover;
 
@@ -13,5 +13,6 @@
     top: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: $light;
   }
 }
