--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ body {
 .logo {
   font-size: 70px;
   color: #ffd700;
+  width: 110px;
+  height: 110px;
+  border: 3px solid #ffd700;
+  border-radius: 50%;
 }
 
 /*# sourceMappingURL=main.css.map */
