--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,4 +1,8 @@
 .logo {
   font-size: 70px;
   color: $primary;
+  width: 110px;
+  height: 110px;
+  border: 3px solid $primary;
+  border-radius: 50%;
 }
