--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,9 @@ body {
   height: 110px;
   border: 3px solid #ffd700;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=main.css.map */
