--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: #fffcfa;
+  display: flex;
+  align-items: center;
 }
 
 .logo {
