--- a/css/main.css
+++ b/css/main.css
@@ -39,8 +39,10 @@ body {
 .main-name {
   font-family: "Loved by the King", cursive;
   font-size: 50px;
-  font-weight: 400;
   color: #ffd700;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=main.css.map */
