--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
   height: 110px;
   border: 3px solid #ffd700;
   border-radius: 50%;
+  margin-right: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,6 +41,16 @@ body {
   font-family: "Loved by the King", cursive;
   font-size: 50px;
   color: #ffd700;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.sub-name {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  color: #ffd700;
+  text-align: center;
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase;
