--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -5,6 +5,7 @@
   height: 110px;
   border: 3px solid $primary;
   border-radius: 50%;
+  margin-right: 20px;
   @include flexLayout;
 }
 
@@ -12,5 +13,13 @@
   font-family: $font-logo;
   font-size: 50px;
   color: $primary;
+  @include textStyles;
+}
+
+.sub-name {
+  font-family: $font-main;
+  font-size: 18px;
+  color: $primary;
+  text-align: center;
   @include textStyles;
 }
