--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,21 @@ body {
   justify-content: center;
   align-items: center;
 }
+@media (max-width: 1000px) {
+  .logo {
+    font-size: 50px;
+    width: 90px;
+    height: 90px;
+  }
+}
+@media (max-width: 500px) {
+  .logo {
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
+    border-width: 2px;
+  }
+}
 
 .main-name {
   font-family: "Loved by the King", cursive;
@@ -44,6 +59,17 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+@media (max-width: 1000px) {
+  .main-name {
+    font-size: 40px;
+  }
+}
+@media (max-width: 500px) {
+  .main-name {
+    font-size: 20px;
+    text-align: center;
+  }
 }
 
 .sub-name {
@@ -54,6 +80,12 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+@media (max-width: 500px) {
+  .sub-name {
+    font-size: 12px;
+    text-align: center;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
