--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,6 +2,7 @@ $dark: #111;
 $black: #000;
 $light: #fffcfa;
 $primary: #ffd700;
+$secondary: #ff4500;
 $font-main: 'Poppins', sans-serif;
 $font-logo: 'Loved by the King', cursive;
 
