--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -7,6 +7,19 @@
   border-radius: 50%;
   margin-right: 20px;
   @include flexLayout;
+
+  @media(max-width: 1000px) {
+    font-size: 50px;
+    width: 90px;
+    height: 90px;
+  }
+
+  @media(max-width: 500px) {
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
+    border-width: 2px;
+  }
 }
 
 .main-name {
@@ -14,6 +27,15 @@
   font-size: 50px;
   color: $primary;
   @include textStyles;
+  
+  @media(max-width: 1000px) {
+    font-size: 40px;
+  }
+
+  @media(max-width: 500px) {
+    font-size: 20px;
+    text-align: center;  
+  }
 }
 
 .sub-name {
@@ -22,4 +44,9 @@
   color: $primary;
   text-align: center;
   @include textStyles;
+
+  @media(max-width: 500px) {
+    font-size: 12px;
+    text-align: center;  
+  }
 }
