--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,18 @@ body {
   background-size: cover;
 }
 .header .brand {
+  display: flex;
+  align-items: center;
   position: absolute;
   top: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #fffcfa;
-  display: flex;
-  align-items: center;
+}
+.header-banner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .logo {
