--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -18,6 +18,13 @@ $font-logo: 'Loved by the King', cursive;
   text-transform: uppercase;
 }
 
+@mixin centering($topValue) {
+  position: absolute;
+  top: $topValue;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 * {
   margin: 0;
   padding: 0;
