--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -9,12 +9,12 @@
   background-size: cover;
 
   .brand {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: $light;
     display: flex;
     align-items: center;
+    @include centering(15%);
+  }
+
+  &-banner {
+    @include centering(50%);
   }
 }
