--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,14 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+@media (max-width: 500px) {
+  .header .brand {
+    position: absolute;
+    top: 12%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
 .header-banner {
   text-align: center;
   color: #ffd700;
@@ -101,12 +109,52 @@ body {
   font-weight: 300;
   margin-bottom: 40px;
 }
+@media (max-width: 1600px) {
+  .main-heading {
+    font-size: 80px;
+  }
+}
+@media (max-width: 1000px) {
+  .main-heading {
+    font-size: 60px;
+  }
+}
+@media (max-width: 500px) {
+  .main-heading {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
+}
 
 .sub-heading {
   font-family: "Poppins", sans-serif;
   font-size: 60px;
   font-weight: 300;
   margin-bottom: 80px;
+  text-align: center;
+}
+@media (max-width: 1600px) {
+  .sub-heading {
+    font-size: 50px;
+    margin-bottom: 50px;
+  }
+}
+@media (max-width: 1300px) {
+  .sub-heading {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 1000px) {
+  .sub-heading {
+    font-size: 30px;
+  }
+}
+@media (max-width: 500px) {
+  .sub-heading {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
