--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -56,6 +56,19 @@
   font-size: 100px;
   font-weight: 300;
   margin-bottom: 40px;
+
+  @media(max-width: 1600px) {
+    font-size: 80px;
+  }
+
+  @media(max-width: 1000px) {
+    font-size: 60px;
+  }
+
+  @media(max-width: 500px) {
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
 }
 
 .sub-heading {
@@ -63,4 +76,24 @@
   font-size: 60px;
   font-weight: 300;
   margin-bottom: 80px;
+  text-align: center;
+
+  @media(max-width: 1600px) {
+    font-size: 50px;
+    margin-bottom: 50px;
+  }
+  
+  @media(max-width: 1300px) {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+
+  @media(max-width: 1000px) {
+    font-size: 30px;
+  }
+
+  @media(max-width: 500px) {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
 }
