--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -12,6 +12,10 @@
     display: flex;
     align-items: center;
     @include centering(15%);
+
+    @media(max-width: 500px) {
+      @include centering(12%);
+    }
   }
 
   &-banner {
