--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -97,3 +97,11 @@
     margin-bottom: 10px;
   }
 }
+
+.main-btn {
+  width: 170px;
+  height: 45px;
+  font-family: $font-main;
+  font-size: 14px;
+  text-transform: uppercase;
+}
