--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,13 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
   text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #ffd700;
+  background-color: transparent;
+  border: 1px solid #ffd700;
+  border-radius: 3px;
+  outline: none;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=main.css.map */
