--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -104,4 +104,11 @@
   font-family: $font-main;
   font-size: 14px;
   text-transform: uppercase;
+  letter-spacing: 1px;
+  color: $primary;
+  background-color: transparent;
+  border: 1px solid $primary;
+  border-radius: 3px;
+  outline: none;
+  cursor: pointer;
 }
