--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,7 @@ body {
   width: 170px;
   height: 45px;
   font-family: "Poppins", sans-serif;
+  font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -170,6 +171,11 @@ body {
   border-radius: 3px;
   outline: none;
   cursor: pointer;
+  transition: all 0.5s;
+}
+.main-btn:hover {
+  background-color: #ffd700;
+  color: #111;
 }
 
 /*# sourceMappingURL=main.css.map */
