--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -102,6 +102,7 @@
   width: 170px;
   height: 45px;
   font-family: $font-main;
+  font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -111,4 +112,11 @@
   border-radius: 3px;
   outline: none;
   cursor: pointer;
+  transition: all 0.5s;
+
+  &:hover {
+    background-color: $primary;
+    color: $dark;
+  }
 }
+
