--- a/css/main.css
+++ b/css/main.css
@@ -177,5 +177,19 @@ body {
   background-color: #ffd700;
   color: #111;
 }
+@media (max-width: 800px) {
+  .main-btn {
+    width: 150px;
+    height: 35px;
+    font-size: 12px;
+  }
+}
+@media (max-width: 500px) {
+  .main-btn {
+    width: 130px;
+    height: 0px;
+    font-size: 10px;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
