Starting about us section styling.

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,18 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.about-us {
+  height: 90vh;
+  display: flex;
+  align-items: center;
+}
+.about-us-left {
+  width: 40%;
+}
+.about-us-left img {
+  width: 100%;
+}
+
 .logo {
   font-size: 70px;
   color: #ffd700;
