--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -24,3 +24,17 @@
     @include centering(50%);
   }
 }
+
+.about-us {
+  height: 90vh;
+  display: flex;
+  align-items: center;
+
+  &-left {
+    width: 40%;
+
+    img {
+      width: 100%;
+    }
+  }
+}
