--- a/css/main.css
+++ b/css/main.css
@@ -46,9 +46,18 @@ body {
 }
 .about-us-left {
   width: 40%;
+  position: absolute;
+  left: -200px;
 }
 .about-us-left img {
   width: 100%;
+  opacity: 0.7;
+}
+.about-us-right {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
