--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -32,9 +32,19 @@
 
   &-left {
     width: 40%;
+    position: absolute;
+    left: -200px;
 
     img {
       width: 100%;
+      opacity: 0.7;
     }
+  }
+
+  &-right {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;;
   }
 }
