--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,14 @@ body {
   flex-direction: column;
   align-items: center;
 }
+.about-us-right .icons {
+  margin: 30px 0;
+}
+.about-us-right .icon {
+  font-size: 15px;
+  color: #ffd700;
+  margin-left: 10px;
+}
 
 .logo {
   font-size: 70px;
