--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -45,6 +45,16 @@
     width: 60%;
     display: flex;
     flex-direction: column;
-    align-items: center;;
+    align-items: center;
+
+    .icons {
+      margin: 30px 0;
+    }
+
+    .icon {
+      font-size: 15px;
+      color: $primary;
+      margin-left: 10px;
+    }
   }
 }
