--- a/css/main.css
+++ b/css/main.css
@@ -44,10 +44,25 @@ body {
   display: flex;
   align-items: center;
 }
+@media (max-width: 900px) {
+  .about-us {
+    height: 70vh;
+  }
+}
 .about-us-left {
   width: 40%;
   position: absolute;
   left: -200px;
+}
+@media (max-width: 1300px) {
+  .about-us-left {
+    left: -150%;
+  }
+}
+@media (max-width: 800px) {
+  .about-us-left {
+    display: none;
+  }
 }
 .about-us-left img {
   width: 100%;
@@ -58,14 +73,36 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 100px;
+  box-sizing: border-box;
+}
+@media (max-width: 1300px) {
+  .about-us-right {
+    padding: 0 50px;
+  }
+}
+@media (max-width: 800px) {
+  .about-us-right {
+    width: 100%;
+  }
 }
 .about-us-right .icons {
   margin: 30px 0;
+}
+@media (max-width: 1000px) {
+  .about-us-right .icons {
+    margin: 15px 0;
+  }
 }
 .about-us-right .icon {
   font-size: 15px;
   color: #ffd700;
   margin-left: 10px;
+}
+@media (max-width: 1000px) {
+  .about-us-right .icon {
+    font-size: 12px;
+  }
 }
 
 .logo {
