--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -30,10 +30,22 @@
   display: flex;
   align-items: center;
 
+  @media(max-width: 900px) {
+    height: 70vh;
+  }
+
   &-left {
     width: 40%;
     position: absolute;
     left: -200px;
+
+    @media(max-width: 1300px) {
+      left: -150%;
+    }
+    
+    @media(max-width: 800px) {
+      display: none;
+    }
 
     img {
       width: 100%;
@@ -46,15 +58,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 100px;
+    box-sizing: border-box;
+
+    @media(max-width: 1300px) {
+      padding: 0 50px;
+    }
+    
+    @media(max-width: 800px) {
+      width: 100%;
+    }
 
     .icons {
       margin: 30px 0;
+
+      @media(max-width: 1000px) {
+        margin: 15px 0;
+      }
     }
 
     .icon {
       font-size: 15px;
       color: $primary;
       margin-left: 10px;
+
+      @media(max-width: 1000px) {
+        font-size: 12px;
+      }
     }
+
   }
 }
