--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,27 @@ body {
     font-size: 12px;
   }
 }
+.about-us-right .description {
+  font-family: "Poppins", sans-serif;
+  font-size: 25px;
+  color: #ffd700;
+  text-align: center;
+}
+@media (max-width: 1600px) {
+  .about-us-right .description {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1000px) {
+  .about-us-right .description {
+    font-size: 14px;
+  }
+}
+@media (max-width: 500px) {
+  .about-us-right .description {
+    font-size: 12px;
+  }
+}
 
 .logo {
   font-size: 70px;
