--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -87,5 +87,23 @@
       }
     }
 
+    .description {
+      font-family: $font-main;
+      font-size: 25px;
+      color: $primary;
+      text-align: center;
+
+      @media(max-width: 1600px) {
+        font-size: 18px;
+      }
+      
+      @media(max-width: 1000px) {
+        font-size: 14px;
+      }
+      
+      @media(max-width: 500px) {
+        font-size: 12px;
+      }
+    }
   }
 }
