--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@ body {
 }
 .header-banner {
   text-align: center;
-  color: #ffd700;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -40,6 +39,7 @@ body {
 }
 
 .about-us {
+  background-color: #000;
   height: 90vh;
   display: flex;
   align-items: center;
@@ -51,22 +51,17 @@ body {
 }
 .about-us-left {
   width: 40%;
-  position: absolute;
+  position: relative;
   left: -200px;
 }
 @media (max-width: 1300px) {
-  .about-us-left {
-    left: -150%;
-  }
-}
-@media (max-width: 800px) {
   .about-us-left {
     display: none;
   }
 }
 .about-us-left img {
+  border: 1px solid #ffd700;
   width: 100%;
-  opacity: 0.7;
 }
 .about-us-right {
   width: 60%;
@@ -77,11 +72,6 @@ body {
   box-sizing: border-box;
 }
 @media (max-width: 1300px) {
-  .about-us-right {
-    padding: 0 50px;
-  }
-}
-@media (max-width: 800px) {
   .about-us-right {
     width: 100%;
   }
@@ -192,52 +182,37 @@ body {
 
 .main-heading {
   font-family: "Loved by the King", cursive;
-  font-size: 100px;
+  font-size: 90px;
   font-weight: 300;
-  margin-bottom: 40px;
+  color: #ffd700;
+  margin-bottom: 30px;
 }
 @media (max-width: 1600px) {
   .main-heading {
-    font-size: 80px;
+    font-size: 70px;
   }
 }
 @media (max-width: 1000px) {
   .main-heading {
-    font-size: 60px;
-  }
-}
-@media (max-width: 500px) {
-  .main-heading {
-    font-size: 40px;
-    margin-bottom: 20px;
+    font-size: 50px;
   }
 }
 
 .sub-heading {
   font-family: "Poppins", sans-serif;
-  font-size: 60px;
+  font-size: 50px;
   font-weight: 300;
-  margin-bottom: 80px;
+  color: #ffd700;
+  margin-bottom: 60px;
   text-align: center;
 }
 @media (max-width: 1600px) {
-  .sub-heading {
-    font-size: 50px;
-    margin-bottom: 50px;
-  }
-}
-@media (max-width: 1300px) {
   .sub-heading {
     font-size: 40px;
     margin-bottom: 30px;
   }
 }
-@media (max-width: 1000px) {
-  .sub-heading {
-    font-size: 30px;
-  }
-}
-@media (max-width: 500px) {
+@media (max-width: 1300px) {
   .sub-heading {
     font-size: 20px;
     margin-bottom: 10px;
