--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -53,46 +53,35 @@
 
 .main-heading {
   font-family: $font-logo;
-  font-size: 100px;
+  font-size: 90px;
   font-weight: 300;
-  margin-bottom: 40px;
+  color: $primary;
+  margin-bottom: 30px;
 
   @media(max-width: 1600px) {
-    font-size: 80px;
+    font-size: 70px;
   }
 
   @media(max-width: 1000px) {
-    font-size: 60px;
+    font-size: 50px;
   }
 
-  @media(max-width: 500px) {
-    font-size: 40px;
-    margin-bottom: 20px;
-  }
 }
 
 .sub-heading {
   font-family: $font-main;
-  font-size: 60px;
+  font-size: 50px;
   font-weight: 300;
-  margin-bottom: 80px;
+  color: $primary;
+  margin-bottom: 60px;
   text-align: center;
 
   @media(max-width: 1600px) {
-    font-size: 50px;
-    margin-bottom: 50px;
-  }
-  
-  @media(max-width: 1300px) {
     font-size: 40px;
     margin-bottom: 30px;
   }
-
-  @media(max-width: 1000px) {
-    font-size: 30px;
-  }
-
-  @media(max-width: 500px) {
+  
+  @media(max-width: 1300px) {
     font-size: 20px;
     margin-bottom: 10px;
   }
