--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -20,12 +20,12 @@
 
   &-banner {
     text-align: center;
-    color: $primary;
     @include centering(50%);
   }
 }
 
 .about-us {
+  background-color: $black;
   height: 90vh;
   display: flex;
   align-items: center;
@@ -36,20 +36,16 @@
 
   &-left {
     width: 40%;
-    position: absolute;
+    position: relative;
     left: -200px;
 
     @media(max-width: 1300px) {
-      left: -150%;
-    }
-    
-    @media(max-width: 800px) {
       display: none;
     }
 
     img {
+      border: 1px solid $primary;
       width: 100%;
-      opacity: 0.7;
     }
   }
 
@@ -62,13 +58,9 @@
     box-sizing: border-box;
 
     @media(max-width: 1300px) {
-      padding: 0 50px;
-    }
-    
-    @media(max-width: 800px) {
       width: 100%;
     }
-
+    
     .icons {
       margin: 30px 0;
 
