--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -45,10 +45,10 @@
   text-align: center;
   @include textStyles;
 
-  @media(max-width: 500px) {
-    font-size: 12px;
-    text-align: center;  
-  }
+  // @media(max-width: 500px) {
+  //   font-size: 12px;
+  //   text-align: center;  
+  // }
 }
 
 .main-heading {
