--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+.card-overlay {
+  width: 100%;
+  height: 100%;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -251,6 +256,29 @@ body {
     height: 30px;
     font-size: 10px;
   }
+}
+
+.card {
+  width: 33.3333%;
+  height: 30vw;
+  position: relative;
+  overflow: hidden;
+}
+.card:hover .card-overlay {
+  left: 0;
+}
+.card-overlay {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #ffd700;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: left 0.7s;
 }
 
 /*# sourceMappingURL=main.css.map */
