--- a/css/main.css
+++ b/css/main.css
@@ -287,5 +287,13 @@ body {
   letter-spacing: 2px;
   text-transform: uppercase;
 }
+.card-paragraph {
+  font-family: "Poppins", sans-serif;
+  font-size: 30px;
+  margin-bottom: 30px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
 
 /*# sourceMappingURL=main.css.map */
