--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -151,6 +151,21 @@
     @include textStyles(capitalize);
   }
 
+  &-btn {
+    width: 150px;
+    height: 40px;
+    color: $primary;
+    background-color: transparent;
+    border: 1px solid $primary;
+    border-radius: 3px;
+    font-family: $font-main;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    outline: none;
+    cursor: pointer;
+  }
 }
 
 
