--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.card-overlay {
+.card-img, .card-overlay {
   width: 100%;
   height: 100%;
 }
@@ -309,6 +309,10 @@ body {
   letter-spacing: 1px;
   outline: none;
   cursor: pointer;
+}
+.card-img {
+  object-fit: cover;
+  opacity: 0.7;
 }
 
 /*# sourceMappingURL=main.css.map */
