--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -166,6 +166,12 @@
     outline: none;
     cursor: pointer;
   }
+
+  &-img {
+    @extend %fullSpace;
+    object-fit: cover;
+    opacity: 0.7;
+  }
 }
 
 
