--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,7 @@ body {
   letter-spacing: 2px;
   text-transform: uppercase;
 }
-.card-paragraph {
+.card-overlay-paragraph {
   font-family: "Poppins", sans-serif;
   font-size: 30px;
   margin-bottom: 30px;
@@ -295,7 +295,7 @@ body {
   letter-spacing: 2px;
   text-transform: capitalize;
 }
-.card-btn {
+.card-overlay-btn {
   width: 150px;
   height: 40px;
   color: #ffd700;
