--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,21 @@ body {
   letter-spacing: 2px;
   text-transform: uppercase;
 }
+@media (max-width: 900px) {
+  .card-overlay-heading {
+    font-size: 35px;
+  }
+}
+@media (max-width: 650px) {
+  .card-overlay-heading {
+    font-size: 25px;
+  }
+}
+@media (max-width: 500px) {
+  .card-overlay-heading {
+    display: none;
+  }
+}
 .card-overlay-paragraph {
   font-family: "Poppins", sans-serif;
   font-size: 30px;
@@ -294,6 +309,21 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: capitalize;
+}
+@media (max-width: 900px) {
+  .card-overlay-paragraph {
+    font-size: 20px;
+  }
+}
+@media (max-width: 650px) {
+  .card-overlay-paragraph {
+    font-size: 15px;
+  }
+}
+@media (max-width: 500px) {
+  .card-overlay-paragraph {
+    display: none;
+  }
 }
 .card-overlay-btn {
   width: 150px;
@@ -310,9 +340,23 @@ body {
   outline: none;
   cursor: pointer;
 }
+@media (max-width: 900px) {
+  .card-overlay-btn {
+    font-size: 12px;
+    width: 130px;
+    height: 30px;
+  }
+}
+@media (max-width: 650px) {
+  .card-overlay-btn {
+    font-size: 10px;
+    width: 100px;
+    height: 30px;
+  }
+}
 .card-img {
   object-fit: cover;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 /*# sourceMappingURL=main.css.map */
