--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -141,6 +141,18 @@
       font-family: $font-logo;
       font-size: 50%;
       @include textStyles(uppercase);
+
+      @media(max-width: 900px) {
+        font-size: 35px;
+      }
+      
+      @media(max-width: 650px) {
+        font-size: 25px;
+      }
+      
+      @media(max-width: 500px) {
+        display: none;
+      }
     }
   
     &-paragraph {
@@ -148,6 +160,18 @@
       font-size: 30px;
       margin-bottom: 30px;
       @include textStyles(capitalize);
+
+      @media(max-width: 900px) {
+        font-size: 20px;
+      }
+      
+      @media(max-width: 650px) {
+        font-size: 15px;
+      }
+      
+      @media(max-width: 500px) {
+        display: none;
+      }
     }
 
     &-btn {
@@ -164,13 +188,25 @@
       letter-spacing: 1px;
       outline: none;
       cursor: pointer;
+
+      @media(max-width: 900px) {
+        font-size: 12px;
+        width: 130px;
+        height: 30px;
+      }
+      
+      @media(max-width: 650px) {
+        font-size: 10px;
+        width: 100px;
+        height: 30px;
+      }
     }
   }
-  
+
   &-img {
     @extend %fullSpace;
     object-fit: cover;
-    opacity: 0.7;
+    opacity: 0.9;
   }
 }
 
