--- a/css/main.css
+++ b/css/main.css
@@ -339,6 +339,7 @@ body {
   letter-spacing: 1px;
   outline: none;
   cursor: pointer;
+  transition: all 0.5s;
 }
 @media (max-width: 900px) {
   .card-overlay-btn {
@@ -353,6 +354,10 @@ body {
     width: 100px;
     height: 30px;
   }
+}
+.card-overlay-btn:hover {
+  background-color: #ffd700;
+  color: #111;
 }
 .card-img {
   object-fit: cover;
