--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,19 @@ body {
   flex-wrap: wrap;
 }
 
+.footer {
+  padding: 70px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+@media (max-width: 500px) {
+  .footer {
+    padding: 40px 0;
+  }
+}
+
 .logo {
   font-size: 70px;
   color: #ffd700;
