--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,11 @@ body {
     padding: 40px 0;
   }
 }
+.footer-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 70px;
+}
 
 .logo {
   font-size: 70px;
