--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -115,5 +115,10 @@
   @media(max-width: 500px) {
     padding: 40px 0;
   }
-  
+
+  &-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 70px;
+  }
 }
