--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -147,7 +147,13 @@
         color: var(--light);
       }
 
+      @media(max-width: 1000px) {
+        font-size: 35px;
+      }
       
+      @media(max-width: 500px) {
+        font-size: 25px;
+      }
     }
   }
 }
