--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -140,11 +140,11 @@
     &-link {
       text-decoration: none;
       font-size: 50px;
-      color: var(--primary);
+      color: $primary;     
       transition: color 0.5s ease-in;
 
       &:hover {
-        color: var(--light);
+        color: $light;
       }
 
       @media(max-width: 1000px) {
@@ -154,6 +154,22 @@
       @media(max-width: 500px) {
         font-size: 25px;
       }
+    }
+  }
+
+  &-copyright-paragraph {
+    font-family: $font-logo;
+    font-size: 18px;
+    color: $light;
+    @include textStyles(capitalize);
+    
+    @media(max-width: 800px) {
+      width: 70%;
+      margin: auto;
+      text-align: center
+    }
+    @media(max-width: 500px) {
+      font-size: 14px;
     }
   }
 }
